# BlazeCapture

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pack_assets.py
include/blaze/capture/: audio.h  audio.hpp  core.hpp  misc.hpp  nvidia.hpp  video.h  video.hpp
include/blaze/capture/linux/: audio.hpp  generic.hpp  misc.hpp  nvidia.hpp
src/: CMakeLists.txt  audio.cpp  core.cpp  core_internal.cpp  core_public.cpp  core_vulkan.cpp  linux_audio.cpp  linux_generic.cpp  linux_nvidia.cpp  linux_video.cpp
src/app/: main.cpp
tests/: CMakeLists.txt
